sync-fw (0.5.16) stable; urgency=low

  * Added defines for off peak and peak enable/disable.

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Thu, 17 Mar 2011 16:18:04 +0200

sync-fw (0.5.15) stable; urgency=low

  * "equals to" member function in SyncSchedule.

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Mon, 14 Mar 2011 16:18:04 +0200

sync-fw (0.5.14) stable; urgency=low

  * Fixes: NB#228977 - Schedule synchronization is not initiated after setting schedule and peak interval for 5mins.

 -- Amit <amit.5.aggarwal@nokia.com>  Fri, 04 Mar 2011 18:11:04 +0200

sync-fw (0.5.13) stable; urgency=low

  * Fixes: NB#232613 - Sync profile is not deleted after tapping on Yes 
    button in confirmation dialog

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Wed, 02 Mar 2011 18:11:04 +0200

sync-fw (0.5.12) stable; urgency=low

  * Fixes: NB#230558 - Calendar sync fails with NOS via USB
  * Fixes: NB#222418 - Fast sync is done instead of slow sync when ovi.com
    sync is initiated after deleting account.

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Wed, 02 Mar 2011 09:47:04 +0530

sync-fw (0.5.11) stable; urgency=low

  * Fixes: NB#227297 - "Service not supported by other device" message
    displayed when remote sync from X3 to device is initiated
  * Fixes: NB#224749 - Current time is shown in place of Next sync time when schedule synchronize is disabled and enabled it. 
  * Fixes: NB#178342 - New calendar is not created in device after synchronizing calendar events from N95 to device

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Fri, 18 Feb 2011 18:14:01 +0530

sync-fw (0.5.10) stable; urgency=low

  * Fixes: NB#218016 - Next Synchronization time of scheduled ovi.com sync is updating with the current time.

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Fri, 18 Feb 2011 18:14:01 +0530

sync-fw (0.5.9) stable; urgency=low

  * Implemented sync retries feature 